--- a/checkout.html
+++ b/checkout.html
@@ -33,7 +33,7 @@
                     <ul class="dropdown-menu">
                       <li><a class="dropdown-item" href="Products.html">Shop</a></li>
                       <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item" href="promotions.html">Promotions</a></li>
+                      <li><a class="dropdown-item" href="promotions.html">Black-Market</a></li>
                     </ul>
                   </li>
                 <li class="nav-item">
