--- a/productitem.html
+++ b/productitem.html
@@ -33,7 +33,7 @@
                   <ul class="dropdown-menu">
                     <li><a class="dropdown-item" href="Products.html">Shop</a></li>
                     <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" href="promotions.html">Promotions</a></li>
+                    <li><a class="dropdown-item" href="promotions.html">Black-Market</a></li>
                   </ul>
                 </li>
                 <li class="nav-item">
@@ -63,12 +63,12 @@
                 <div class="col-md-6"><img class="card-img-top mb-5 mb-md-0" src="Nike-Tech-Fleece-Full-Zip-Hoodie-Grey-Product.webp" alt="..." /></div>
                 <div class="col-md-6">
                     <div class="small mb-1">SKU: BST-498</div>
-                    <h1 class="display-5 fw-bolder">Shop item template</h1>
+                    <h1 class="display-5 fw-bolder">Nike Grey Tech</h1>
                     <div class="fs-5 mb-5">
                         <span class="text-decoration-line-through">$45.00</span>
                         <span>$40.00</span>
                     </div>
-                    <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium at dolorem quidem modi. Nam sequi consequatur obcaecati excepturi alias magni, accusamus eius blanditiis delectus ipsam minima ea iste laborum vero?</p>
+                    <p class="lead">Ready to rock the warmth and comfort of your favorite weekender hoodie, but need to keep your look clean? This Nike Tech Fleece hoodie strikes the right balance with a lightweight, low-profile design that packs in the heat without adding bulk. You can layer with ease whether you're lounging at home or making your city commute.</p>
                     <div class="d-flex">
                         <input class="form-control text-center me-3" id="inputQuantity" type="num" value="1" style="max-width: 3rem" />
                         <button class="btn btn-outline-dark flex-shrink-0" type="button">
