--- a/promotions.html
+++ b/promotions.html
@@ -33,7 +33,7 @@
                   <ul class="dropdown-menu">
                     <li><a class="dropdown-item" href="Products.html">Shop</a></li>
                     <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" href="promotions.html">Promotions</a></li>
+                    <li><a class="dropdown-item" href="promotions.html">Black-Market</a></li>
                   </ul>
                 </li>
                 <li class="nav-item">
@@ -56,23 +56,15 @@
         </nav>
       </header>
 
- <!-- Header-->
- <header class="bg-dark py-5">
-    <div class="container px-4 px-lg-5 my-5">
-        <div class="text-center text-white">
-            <h1 class="display-4 fw-bolder">Shop in style</h1>
-            <p class="lead fw-normal text-white-50 mb-0">With this shop hompeage template</p>
-        </div>
-    </div>
-</header>
-<!-- Section-->
-<section class="py-5">
+  <!-- Section-->
+  <section class="py-5">
     <div class="container px-4 px-lg-5 mt-5">
         <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
             <div class="col mb-5">
                 <div class="card h-100">
                     <!-- Product image-->
-                    <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
+                    <a href="productitem.html">
+                    <img class="card-img-top" src="Nike-Tech-Fleece-Full-Zip-Hoodie-Grey-Product.webp" alt="..." /></a>
                     <!-- Product details-->
                     <div class="card-body p-4">
                         <div class="text-center">
@@ -90,10 +82,13 @@
             </div>
             <div class="col mb-5">
                 <div class="card h-100">
+        
                     <!-- Sale badge-->
                     <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale</div>
                     <!-- Product image-->
-                    <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
+                    <a href="productitem.html">
+                      <img class="card-img-top"
+                       src="Nike-Tech-Fleece-Full-Zip-Hoodie-Grey-Product.webp" alt="..." /></a>
                     <!-- Product details-->
                     <div class="card-body p-4">
                         <div class="text-center">
@@ -123,7 +118,8 @@
                     <!-- Sale badge-->
                     <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale</div>
                     <!-- Product image-->
-                    <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
+                    <a href="productitem.html">
+                      <img class="card-img-top" src="Nike-Tech-Fleece-Full-Zip-Hoodie-Grey-Product.webp" alt="..." /></a>
                     <!-- Product details-->
                     <div class="card-body p-4">
                         <div class="text-center">
@@ -143,7 +139,8 @@
             <div class="col mb-5">
                 <div class="card h-100">
                     <!-- Product image-->
-                    <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
+                    <a href="productitem.html">
+                      <img class="card-img-top" src="Nike-Tech-Fleece-Full-Zip-Hoodie-Grey-Product.webp" alt="..." /></a>
                     <!-- Product details-->
                     <div class="card-body p-4">
                         <div class="text-center">
@@ -172,8 +169,8 @@
                     <!-- Sale badge-->
                     <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale</div>
                     <!-- Product image-->
-                    <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
-                    <!-- Product details-->
+                    <a href="productitem.html">
+                      <img class="card-img-top" src="Nike-Tech-Fleece-Full-Zip-Hoodie-Grey-Product.webp" alt="..." /></a>
                     <div class="card-body p-4">
                         <div class="text-center">
                             <!-- Product name-->
@@ -192,7 +189,8 @@
             <div class="col mb-5">
                 <div class="card h-100">
                     <!-- Product image-->
-                    <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
+                    <a href="productitem.html">
+                      <img class="card-img-top" src="Nike-Tech-Fleece-Full-Zip-Hoodie-Grey-Product.webp" alt="..." /></a>
                     <!-- Product details-->
                     <div class="card-body p-4">
                         <div class="text-center">
@@ -213,7 +211,8 @@
                     <!-- Sale badge-->
                     <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale</div>
                     <!-- Product image-->
-                    <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
+                    <a href="productitem.html">
+                      <img class="card-img-top" src="Nike-Tech-Fleece-Full-Zip-Hoodie-Grey-Product.webp" alt="..." /></a>
                     <!-- Product details-->
                     <div class="card-body p-4">
                         <div class="text-center">
@@ -241,7 +240,8 @@
             <div class="col mb-5">
                 <div class="card h-100">
                     <!-- Product image-->
-                    <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
+                    <a href="productitem.html">
+                      <img class="card-img-top" src="Nike-Tech-Fleece-Full-Zip-Hoodie-Grey-Product.webp" alt="..." /></a>
                     <!-- Product details-->
                     <div class="card-body p-4">
                         <div class="text-center">
@@ -272,8 +272,7 @@
 <footer class="py-5 bg-dark">
     <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2022</p></div>
 </footer>
-<!-- Bootstrap core JS-->
-
 </body>
 
 </html>
+
